Permutation between calibration and validation sets for clarity purposes

--- a/ebooks/simul-data.qmd
+++ b/ebooks/simul-data.qmd
@@ -25,6 +25,7 @@ library(tidyverse)
 colour_samples <- c(
   "Train" = "#0072B2",
   "Validation" = "#009E73",
+  "Calibration" = "#CC79A7",
   "Test" = "#D55E00"
 )
 ```
@@ -83,8 +84,8 @@ The `simulate_data()`{.R} function generates data for one of the 12 first scenar
 #' @param mean_num vector of mean for the numerical variables
 #' @param sd_num vector of standard deviations for the numerical variables
 #' @param size_train size for the train set
-#' @param size_calib size for the calibration set
 #' @param size_valid size for the validation set
+#' @param size_calib size for the calibration set
 #' @param size_test size for the test set
 #' @param transform_probs if `TRUE`, the true probability is taken to the power of 3
 #' @param linear_predictor if `TRUE`, the predictor of the true probability is a
@@ -99,12 +100,12 @@ The `simulate_data()`{.R} function generates data for one of the 12 first scenar
 #'
 #' @returns A list with the following components:
 #'  - train: train set
-#'  - calib: calibration set
 #'  - valid: validation set
+#'  - calib: calibration set
 #'  - test: test set
 #'  - probs_train: true probabilities for binary event in train set
-#'  - probs_calib: true probabilities for binary event in calibration set 
 #'  - probs_valid: true probabilities for binary event in validation set
+#'  - probs_calib: true probabilities for binary event in calibration set 
 #'  - probs_test: true probabilities for binary event in test set
 simulate_data <- function(n_num = 2,
                           add_categ = FALSE,
@@ -113,15 +114,15 @@ simulate_data <- function(n_num = 2,
                           mean_num,
                           sd_num,
                           size_train,
-                          size_calib,
                           size_valid,
+                          size_calib,
                           size_test,
                           transform_probs = FALSE,
                           linear_predictor = TRUE,
                           linear_predictor_factor = 3,
                           seed = NULL) {
 
-  n_obs <- size_train + size_calib + size_valid + size_test
+  n_obs <- size_train + size_valid + size_calib + size_test
   if (linear_predictor == FALSE) {
     n_obs <- n_obs * linear_predictor_factor
   }
@@ -211,29 +212,29 @@ simulate_data <- function(n_num = 2,
   tb_train <- tb |> dplyr::slice(1:size_train)
   true_prob_train <- true_prob[1:size_train]
   
-  # Calibration
-  ind_calib <- (size_train + 1):(size_train + size_calib)
-  tb_calib <- tb |> dplyr::slice(ind_calib)
-  true_prob_calib <- true_prob[ind_calib]
-  
   # Validation
-  ind_valid <- (size_train + size_calib + 1):(size_train + size_calib + size_valid)
+  ind_valid <- (size_train + 1):(size_train + size_valid)
   tb_valid <- tb |> dplyr::slice(ind_valid)
   true_prob_valid <- true_prob[ind_valid]
   
+  # Calibration
+  ind_calib <- (size_train + size_valid + 1):(size_train + size_valid + size_calib)
+  tb_calib <- tb |> dplyr::slice(ind_calib)
+  true_prob_calib <- true_prob[ind_calib]
+  
   # Test
-  ind_test <- (size_train + size_calib + size_valid+ 1):n_obs
+  ind_test <- (size_train + size_valid + size_calib + 1):n_obs
   tb_test <- tb |> dplyr::slice(ind_test)
   true_prob_test <- true_prob[ind_test]
   
   list(
     train = tb_train,
-    calib = tb_calib,
     valid = tb_valid,
+    calib = tb_calib,
     test = tb_test,
     probs_train = true_prob_train,
-    probs_calib = true_prob_calib,
     probs_valid = true_prob_valid,
+    probs_calib = true_prob_calib,
     probs_test = true_prob_test
   )
 }
@@ -279,8 +280,8 @@ simulate_data_wrapper <- function(scenario, params_df, repn) {
     mean_num = params |> pull("mean_num") |> pluck(1),
     sd_num = params |> pull("sd_num") |> pluck(1),
     size_train = params |> pull("size_train"),
-    size_calib = params |> pull("size_calib"),
     size_valid = params |> pull("size_valid"),
+    size_calib = params |> pull("size_calib"),
     size_test = params |> pull("size_test"),
     transform_probs = params |> pull("transform_probs"),
     linear_predictor = params |> pull("linear_predictor"),
@@ -411,8 +412,8 @@ params_df <- tibble(
   mean_num = mean_num,
   sd_num = sd_num,
   size_train = rep(10000, 16),
-  size_calib = rep(10000, 16),
   size_valid = rep(10000, 16),
+  size_calib = rep(10000, 16),
   size_test = rep(10000, 16),
   transform_probs = c(rep(FALSE, 4), rep(TRUE, 4), rep(FALSE, 4), rep(FALSE, 4)),
   linear_predictor = c(rep(TRUE, 12), rep(FALSE, 4)),
@@ -447,15 +448,15 @@ for (scenario in 1:16) {
     "Valid" = "#009E73",
     "Test" = "#D55E00"
   )
-  for (sample in c("train", "calib", "valid", "test")) {
+  for (sample in c("train", "valid", "calib", "test")) {
     if (sample == "train") {
       true_prob <- simu_data$data$probs_train
       i_scores <- 1
-    } else if (sample == "calib") {
-      true_prob <- simu_data$data$probs_calib
-      i_scores <- 2
     } else if (sample == "valid") {
       true_prob <- simu_data$data$probs_valid
+      i_scores <- 2
+    } else if (sample == "calib") {
+      true_prob <- simu_data$data$probs_calib
       i_scores <- 3
     } else {
       true_prob <- simu_data$data$probs_test
@@ -468,7 +469,7 @@ for (scenario in 1:16) {
       border = "white",
       xlab = "p", ylab = "",
       main = str_c(
-        "Scen. ", scenario, ", ", c("Train", "Calib", "Valid", "Test")[i_scores]
+        "Scen. ", scenario, ", ", c("Train", "Valid", "Calib", "Test")[i_scores]
       ),
       xlim = c(0, 1)
     )
